--- a/config-default.yaml
+++ b/config-default.yaml
@@ -60,8 +60,8 @@ dataset:
 
 
 
-  # Specify a dataset here. There must be a folder of that name under "data/".
-  # If this folder contains a dataset.yaml file, it overrides the defaults
+  # Specify a data here. There must be a folder of that name under "data/".
+  # If this folder contains a data.yaml file, it overrides the defaults
   # specified below.
   name: 'icews14'
 
@@ -73,28 +73,28 @@ dataset:
   # relation_ids file (see below).
   num_relations: -1
 
-  # A list of files associated with this dataset, each associated with a key.
-  # Each entry must contain at least the filename and the type fields.
+    # A list of files associated with this data, each associated with a key.
+    # Each entry must contain at least the filename and the type fields.
 
 
     # Files that store human-readble string representations of each
     # entity/relation. These files are optional.
     #
-    # Type can be map (field 0 is internal index) or idmap (field 0 is external
-    # id).
+  # Type can be map (field 0 is internal index) or idmap (field 0 is external
+  # id).
 
 
-    # Additional files can be added as needed
+  # Additional files can be added as needed
   +++: +++
 
-  # Whether to store processed dataset files and indexes as binary files in the
-  # dataset directory. This enables faster loading at the cost of storage space.
+  # Whether to store processed data files and indexes as binary files in the
+  # data directory. This enables faster loading at the cost of storage space.
   # LibKGE will ensure that pickled files are only used when not outdated. Note
-  # that the value specified here may be overwritten by dataset-specific choices
-  # (in dataset.yaml).
+  # that the value specified here may be overwritten by data-specific choices
+  # (in data.yaml).
   pickle: True
 
-  # Additional dataset specific keys can be added as needed
+  # Additional data specific keys can be added as needed
 
 
 ## MODEL #######################################################################
@@ -121,7 +121,7 @@ negative_sampling:
 
 # Options of training jobs (job.type=="train")
 train:
-  # Split used for training (specified under 'dataset.files').
+  # Split used for training (specified under 'data.files').
   split: train
 
   # Type of training job.
@@ -268,6 +268,13 @@ train:
   # Other options
   pin_memory: False
 
+eval:
+  split: test # in [test or valid]
+  filter: static  # in [off, static, time-aware]
+  ordering: optimistic    # in [optimistic, peesimistic]
+  k: [1, 3, 10]
+
+
 
 # Options for KvsAll training (train.type=="KvsAll")
 KvsAll:
@@ -369,8 +376,8 @@ KvsAll:
 # Options used for all evaluation jobs (job.type=="eval"). Also used during
 # validation when training (unless overridden, see below). Right now, evaluation
 # jobs compute a fixed set of metrics: MRR, HITS@k.
-eval:
-  # Split used for evaluation (specified under 'dataset.files').
+evaluation:
+  # Split used for evaluation (specified under 'data.files').
   split: valid
 
   # Type of evaluation (entity_ranking, training_loss)
