--- a/config-desimple.yaml
+++ b/config-desimple.yaml
@@ -28,7 +28,7 @@ task:
   # the corresponding configuration keys for mode information.
   type: train
 
-  # Main device to use for this job (e.g., 'cpu', 'auto', 'cuda', 'cuda:0')
+  # Main device to use for this job (e.g., 'cpu', 'cuda', 'cuda:0')
   device: 'cpu'
 
 # The seeds of the PRNGs can be set manually for (increased) reproducibility.
@@ -54,8 +54,12 @@ dataset:
 
   # indexes mapping [false, true]
   # TODO 可以保存到cache
-  mapping: FALSE
-  filter: FALSE
+  mapping: False
+  filter: False
+  temporal:
+    level: "day"
+    index: False
+    float: True
   args: ~
 
 
@@ -78,7 +82,7 @@ dataset:
 
 
     # Files that store human-readble string representations of each
-  # entity/relation. These files are optional.
+    # entity/relation. These files are optional.
   #
   # Type can be map (field 0 is internal index) or idmap (field 0 is external
   # id).
@@ -115,7 +119,6 @@ negative_sampling:
   name: 'time_agnostic'
   num_samples: 5
   filter: False
-  as_matrix: True
 
 
 ## TRAINING ####################################################################
@@ -175,6 +178,13 @@ train:
   # Maximum number of epochs used for training
   max_epochs: 20
 
+  loader:
+    num_workers: 0
+    pin_memory: False
+    drop_last: False
+    timeout: 0
+
+
   # Batch size used for training.
   batch_size: 100
 
@@ -192,7 +202,6 @@ train:
 
   # Number of workers used to construct batches. Leave at 0 for default (no
   # separate workers). On Windows, only 0 is supported.
-  num_workers: 0
 
   # Optimizer used for training.
   optimizer:
@@ -211,14 +220,8 @@ train:
         +++: +++
 
   regularizer:
-    list:
-      - name1:
-        type: ~
-        weight: 0.5
+    name: []
     args: ~
-
-  validation:
-    every: 5
 
 
     # Specific optimizer options for parameters matched with regex expressions can be
@@ -273,10 +276,10 @@ train:
   visualize_graph: False
 
   # Other options
-  pin_memory: False
 
 eval:
   split: test # in [test or valid]
+  batch_size: 100
   filter: static  # in [off, static, time-aware]
   ordering: optimistic    # in [optimistic, peesimistic]
   k: [1, 3, 10]
