--- a/config-desimple.yaml
+++ b/config-desimple.yaml
@@ -78,11 +78,11 @@ dataset:
   num_relations: -1
 
     # A list of files associated with this data, each associated with a key.
-    # Each entry must contain at least the filename and the type fields.
+  # Each entry must contain at least the filename and the type fields.
 
 
-    # Files that store human-readble string representations of each
-    # entity/relation. These files are optional.
+  # Files that store human-readble string representations of each
+  # entity/relation. These files are optional.
   #
   # Type can be map (field 0 is internal index) or idmap (field 0 is external
   # id).
@@ -109,16 +109,17 @@ dataset:
 model:
   name: 'de_simple'
   embedding:
-    s_emb_dim: 128
-    t_emb_dim: 128
-  dropout: 0.5
+    s_emb_dim: 100
+    t_emb_dim: 100
+  dropout: 0.4
   args: ~
 
 
 negative_sampling:
   name: 'time_agnostic'
-  num_samples: 5
+  num_samples: 500
   filter: False
+  as_matrix: True
 
 
 ## TRAINING ####################################################################
@@ -127,56 +128,11 @@ negative_sampling:
 train:
   # Split used for training (specified under 'data.files').
   split: train
-
-  # Type of training job.
-  # - KvsAll: scores each unique sp/po/so pair along with all possible completions.
-  # - negative_sampling: scores each unique spo triple along with sampled corrupted
-  #   triples
-  # - 1vsAll: scores each spo triples against the complete set of s/p-corrputed triples
-  #   (all treated negative)
   type: negative_sampling
 
-  # Loss used for training (bce, kl, or margin_ranking).
-  #
-  # KL divergence / cross entropy (kl, all training types): Take softmax over a
-  # set of scores, then compute KL divergence between the so-obtained model
-  # distribution and data distribution. Computed once for each positive triple
-  # and slot (i.e., separately for the subject, relation, and object slots).
-  # Equivalent to cross-entropy loss often found in the literature.
-  #
-  # Margin ranking (margin_ranking, negative_sampling only): Compute margin
-  # between score of positive triple and score of one of its negative triples.
-  # Computed once per negative triple. See loss_arg for parameters.
-  #
-  # Binary cross entropy (bce, all training types): Apply logistic function to
-  # score of triple, then compute binary cross entropy w.r.t. the respective
-  # true label. Computed once for each positive and once for each negative
-  # triple in the batch. See loss_arg for parameters.
-  #
-  # Squared error (se, all training types): Calculate squared error between
-  # the score of a triple and its true value (0, 1). Computed once for each
-  # positive and once for each negative triple in the batch.
-  #
-  # Generally, the loss values are averaged over the batch elements (e.g.,
-  # positive triple for 1vsAll and negative_sampling, sp- or po-pair for
-  # KvsAll). If multiple loss values arise for each batch element (e.g., when
-  # BCE is used), these individual losses are summed up.
-  #
-  # LibKGE also supports some other losses, which we do not recommend to use.
-  # See kge/loss.py for details.
   loss: cross_entropy_loss
-
-  # Argument of loss function (if any). If .nan is specified, a default value is
-  # used (as stated in parenthesis below).
-  #
-  # - margin_ranking (1.0): margin to use
-  # - bce (0.0): offset to add to raw model scores before appyling the logistic
-  #              function. This is useful esp. when the model only outputs negative
-  #              scores (e.g., TransE, RotatE).
   loss_arg: .nan
-
-  # Maximum number of epochs used for training
-  max_epochs: 20
+  max_epochs: 500
 
   loader:
     num_workers: 0
@@ -184,26 +140,17 @@ train:
     drop_last: False
     timeout: 0
 
+  valid:
+    split: test # in [test or valid]
+    every: 20
+    batch_size: 100
+    filter: static  # in [off, static, time-aware]
+    ordering: optimistic    # in [optimistic, peesimistic]
+    k: [1, 3, 10]
 
-  # Batch size used for training.
   batch_size: 100
-
-  # If specified, split the batch into subbatches of at most this size and run
-  # the forward/backward passes separately on each subbatch. This reduces memory
-  # consumption but may increase runtime. This setting allows to simulate larger
-  # batch sizes when the GPU has insufficient memory. An alternative is to
-  # reduce the batch size directly.
-  subbatch_size: -1            # default: no subbatches
-
-  # If set and a batch runs out of memory, repeatedly half the subbatch size
-  # until the batch succeeds. The reduced subbatch size will be used for all
-  # future batches.
+  subbatch_size: -1
   subbatch_auto_tune: False
-
-  # Number of workers used to construct batches. Leave at 0 for default (no
-  # separate workers). On Windows, only 0 is supported.
-
-  # Optimizer used for training.
   optimizer:
     type: Adam
     lr: 0.001
@@ -211,34 +158,18 @@ train:
     args: ~
 
     default:
-      type: Adagrad           # sgd, adagrad, adam
+      type: Adam           # sgd, adagrad, adam
 
-      # Additional arguments for the optimizer. Arbitrary key-value pairs can be
-      # added here and will be passed along to the optimizer. E.g., use entry lr:0.1
-      # to set the learning rate to 0.1.
       args:
         +++: +++
 
   regularizer:
-    name: []
-    args: ~
-
-
-    # Specific optimizer options for parameters matched with regex expressions can be
-    # overwritten. Allows for example to define a separate learning rate for all relation
-    # parameters.
-    # Example:
-    # optimizer:
-    #   relation:
-    #     regex: .*_relation_embedder.*
-    #     args:
-    #       lr: 0.1
-    # Names of child keys of optimizer will be set as parameter group name.
-    # Parameters are named by their variable names and can be retrieved by:
-    # model.named_parameters()
-    # or from a checkpoint by:
-    # kge dump checkpoint checkpoint_file.pt | grep parameter_names
-    +++: +++
+    - name: reg1
+      type: n3
+      weight: 0.3
+    - name: reg2
+      type: norm
+      weight: 0.5
 
   # Learning rate scheduler to use. Any scheduler from torch.optim.lr_scheduler
   # can be used (e.g., ReduceLROnPlateau). When left empty, no LR scheduler is
@@ -258,7 +189,7 @@ train:
     # create an additional checkpoint every this many epochs. Disable additional
     # checkpoints with 0.
     folder: /Users/GengyuanMax/Downloads/ckpt/
-    every: 5
+    every: 20
 
     # Keep this many most recent additional checkpoints.
     keep: 3
@@ -277,12 +208,12 @@ train:
 
   # Other options
 
+
 eval:
-  split: test # in [test or valid]
-  batch_size: 100
-  filter: static  # in [off, static, time-aware]
-  ordering: optimistic    # in [optimistic, peesimistic]
-  k: [1, 3, 10]
+  filter: static
+  ordering: pessimistic
+  k: [1,3,10]
+
 
 
 
@@ -401,7 +332,7 @@ evaluation:
   trace_level: epoch            # example, batch, epoch
 
   # Number of workers used to construct batches. Leave at 0 for default (no
-  # separate workers). On Windows, only 0 is supported.
+  # separate workers). Ofn Windows, only 0 is supported.
   num_workers: 0
 
   # Other options
