--- a/config-desimple.yaml
+++ b/config-desimple.yaml
@@ -4,9 +4,11 @@
 console:
   # If set, no console output is produced
   quiet: False
-  folder: "/Users/GengyuanMax/workspace/tkge/"
+#  folder: "/Users/GengyuanMax/workspace/tkge/"
+  folder: "/home/gengyuan/workspace/tkge/"
 
-  # Formatting of trace entries for console output after certain events, such as
+
+  # Formatting of trace entries folsr console output after certain events, such as
   # finishing an epoch. Each entry is a key-value pair, where the key refers to
   # the type of event and the value is a Python expression (which may access
   # variables "trace" and "config" as well as all trace entries). If no
@@ -29,7 +31,8 @@ task:
   type: train
 
   # Main device to use for this job (e.g., 'cpu', 'cuda', 'cuda:0')
-  device: 'cpu'
+  device: 'cuda'
+
 
 # The seeds of the PRNGs can be set manually for (increased) reproducibility.
 # Use -1 to disable explicit seeding.
@@ -50,7 +53,8 @@ random_seed:
 
 dataset:
   # data folder includes train, val, test files
-  folder: '/Users/GengyuanMax/workspace/tkge/data/icews14'
+#  folder: '/Users/GengyuanMax/workspace/tkge/data/icews14'
+  folder: '/home/gengyuan/workspace/tkge/data/icews14'
 
   # indexes mapping [false, true]
   # TODO 可以保存到cache
@@ -142,7 +146,7 @@ train:
 
   valid:
     split: test # in [test or valid]
-    every: 20
+    every: 10
     batch_size: 100
     filter: static  # in [off, static, time-aware]
     ordering: optimistic    # in [optimistic, peesimistic]
