--- a/config-desimple.yaml
+++ b/config-desimple.yaml
@@ -113,8 +113,8 @@ dataset:
 model:
   name: 'de_simple'
   embedding:
-    s_emb_dim: 100
-    t_emb_dim: 100
+    emb_dim: 100
+    se_prop: 0.9
   dropout: 0.4
   args: ~
 
@@ -152,7 +152,7 @@ train:
     ordering: optimistic    # in [optimistic, peesimistic]
     k: [1, 3, 10]
 
-  batch_size: 100
+  batch_size: 512
   subbatch_size: -1
   subbatch_auto_tune: False
   optimizer:
@@ -215,7 +215,7 @@ train:
 
 eval:
   filter: static
-  ordering: pessimistic
+  ordering: optimistic
   k: [1,3,10]
 
 
