--- a/config-atise.yaml
+++ b/config-atise.yaml
@@ -31,6 +31,8 @@ task:
   # Main device to use for this job (e.g., 'cpu', 'cuda', 'cuda:0')
   device: 'cuda'
 
+  reciprocal_relation: True
+
 # The seeds of the PRNGs can be set manually for (increased) reproducibility.
 # Use -1 to disable explicit seeding.
 random_seed:
@@ -120,6 +122,7 @@ negative_sampling:
   num_samples: 10
   filter: False
   as_matrix: True
+  target: both
 
 
 ## TRAINING ####################################################################
@@ -218,9 +221,9 @@ train:
 
   valid:
     split: test # in [test or valid]
-    every: 10
+    every: 50
     batch_size: 64
-    filter: static  # in [off, static, time-aware]
+    filter: time-aware  # in [off, static, time-aware]
     ordering: optimistic    # in [optimistic, peesimistic]
     k: [1, 3, 10]
 
@@ -271,8 +274,8 @@ train:
     # In addition the the checkpoint of the last epoch (which is transient),
     # create an additional checkpoint every this many epochs. Disable additional
     # checkpoints with 0.
-    folder: /Users/GengyuanMax/Downloads/ckpt/
-    every: 100
+    folder: /home/gengyuan/workspace/ckpt/
+    every: 500
 
     # Keep this many most recent additional checkpoints.
     keep: 3
