--- a/config-desimple.yaml
+++ b/config-desimple.yaml
@@ -137,8 +137,8 @@ train:
   split: train
   type: negative_sampling
 
-  loss: cross_entropy_loss
-  loss_arg: .nan
+  loss:
+    type: cross_entropy_loss
   max_epochs: 500
 
   loader:
@@ -170,13 +170,8 @@ train:
       args:
         +++: +++
 
-  regularizer:
-    - name: reg1
-      type: n3
-      weight: 0.3
-    - name: reg2
-      type: norm
-      weight: 0.5
+  regularizer: ~
+  inplace_regularizer: ~
 
   # Learning rate scheduler to use. Any scheduler from torch.optim.lr_scheduler
   # can be used (e.g., ReduceLROnPlateau). When left empty, no LR scheduler is
@@ -196,7 +191,7 @@ train:
     # create an additional checkpoint every this many epochs. Disable additional
     # checkpoints with 0.
     folder: /home/gengyuan/workplace/ckpt/
-    every: 50
+    every: 100
 
     # Keep this many most recent additional checkpoints.
     keep: 3
@@ -218,7 +213,8 @@ train:
 
 eval:
   filter: time-aware
-  ordering: optimistic
+  ordering: descending
+  preference: optimistic
   k: [1,3,10]
 
 
