small changes: rename time resolution

--- a/config-atise.yaml
+++ b/config-atise.yaml
@@ -59,7 +59,7 @@ dataset:
   mapping: FALSE
   filter: FALSE
   temporal:
-    level: "day"  #deprecated
+    resolution: "day"  #deprecated
     index: False
     float: True
     gran: 3
