--- a/config-tatranse.yaml
+++ b/config-tatranse.yaml
@@ -119,7 +119,7 @@ model:
 
 negative_sampling:
   name: 'time_agnostic'
-  num_samples: 500 # should has no effect
+  num_samples: 1
   filter: False
   as_matrix: True
   target: both
@@ -179,7 +179,7 @@ train:
   max_epochs: 500
 
   # Batch size used for training.
-  batch_size: 128
+  batch_size: 64
 
   # If specified, split the batch into subbatches of at most this size and run
   # the forward/backward passes separately on each subbatch. This reduces memory
@@ -222,8 +222,8 @@ train:
 
   valid:
     split: test # in [test or valid]
-    every: 1
-    batch_size: 500
+    every: 20
+    batch_size: 40
     filter: time-aware  # in [off, static, time-aware]
     ordering: optimistic    # in [optimistic, peesimistic]
     k: [1, 3, 10]
