--- a/config-tatranse.yaml
+++ b/config-tatranse.yaml
@@ -119,7 +119,7 @@ model:
 
 negative_sampling:
   name: 'time_agnostic'
-  num_samples: 1
+  num_samples: 500
   filter: False
   as_matrix: True
   target: both
@@ -228,12 +228,15 @@ train:
     ordering: optimistic    # in [optimistic, peesimistic]
     k: [1, 3, 10]
 
-  regularizer:
-    norm:
-      type: norm_regularize
-      weight: 1
+  regularizer: ~
 
-  inplace_regularizer: ~
+
+  inplace_regularizer:
+    norm:
+      type: inplace_renorm_regularize
+      p: 2
+      dim: 1
+      maxnorm: 1
 
 
 
