--- a/config-atise.yaml
+++ b/config-atise.yaml
@@ -198,9 +198,9 @@ train:
   # Optimizer used for training.
   optimizer:
     type: Adam
-    lr: 0.00003
-    reg_lambda: 0.0
-    args: ~
+    args:
+      lr: 0.00003
+      reg_lambda: 0.0
 
     default:
       type: Adagrad           # sgd, adagrad, adam
