--- a/config-tatranse.yaml
+++ b/config-tatranse.yaml
@@ -199,9 +199,9 @@ train:
   # Optimizer used for training.
   optimizer:
     type: Adam
-    lr: 0.001
-    reg_lambda: 0.0
-    args: ~
+    args:
+      lr: 0.001
+      reg_lambda: 0.0
 
     default:
       type: Adagrad           # sgd, adagrad, adam
