--- a/config-tcomplexe.yaml
+++ b/config-tcomplexe.yaml
@@ -200,7 +200,7 @@ train:
     type: Adagrad
     args:
       lr: 0.1
-      reg_lambda: 0.0
+      # reg_lambda: 0.0
 
     default:
       type: Adagrad           # sgd, adagrad, adam
