--- a/config-tatranse.yaml
+++ b/config-tatranse.yaml
@@ -201,7 +201,7 @@ train:
     type: Adam
     args:
       lr: 0.001
-      reg_lambda: 0.0
+      # reg_lambda: 0.0
 
     default:
       type: Adagrad           # sgd, adagrad, adam
