Set filter to false because filtering in negative sampling is not supported yet

--- a/config-tatranse-paper-1.yaml
+++ b/config-tatranse-paper-1.yaml
@@ -120,7 +120,7 @@ model:
 negative_sampling:
   name: 'time_agnostic'
   num_samples: 500
-  filter: True
+  filter: False # not original setting, but filter is not implemented yet!
   as_matrix: True
   target: both
   args: ~
