Simplified dropout initialization (p is not needed as parameter) and changed the yaml to fit the parameter key "dropout"

--- a/config-tatranse-paper-1.yaml
+++ b/config-tatranse-paper-1.yaml
@@ -40,7 +40,7 @@ model:
   name: ta_transe
   emb_dim: 10 # TODO
   l1_flag: True
-  p: 0.0
+  dropout: 0.0
 
 negative_sampling:
   name: time_agnostic
